--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+signing.keyId=0BACD19C
+signing.password=Erct4321
+signing.secretKeyRingFile=E:\\RyanHome\\YunposProject\\gnupg\\secring.gpg
+ossrhUsername=ryanch741
+ossrhPassword=sarewa
