Http Base Type Support2

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,6 @@ org.gradle.jvmargs=-Xmx1536m
 
 signing.keyId=0BACD19C
 signing.password=Erct4321
-signing.secretKeyRingFile=E:\\RyanHome\\YunposProject\\gnupg\\secring.gpg
+signing.secretKeyRingFile=D:\\RyanHome\\GitHub\\gnupg\\secring.gpg
 ossrhUsername=ryanch741
 ossrhPassword=sarewa
