--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 .gradle
 /local.properties
 /gradle.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+/.idea
